--- a/src/index.htm
+++ b/src/index.htm
@@ -14,8 +14,8 @@
 	<link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<canvas id="canvas"></canvas>
 <!--TODO handle audio tags better-->
+<canvas id="canvas" style="display:none;"></canvas>
 <audio id="clink">
 	<source src="sounds/clink.mp3" type="audio/mpeg">
 </audio>
@@ -23,6 +23,7 @@
 	<source src="sounds/warningtone.mp3" type="audio/mpeg">
 </audio>
 <div id="audio"></div>
+
 <div id="controls">
 	<div id="status">
 		<div id="clock"></div>
